--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                         <span class="bg-green-100 text-green-800 px-2 py-1 rounded text-xs">Freelance</span>
                     </div> -->
                     <div class="flex gap-2">
-                        <a href="file:///H:/ALL%20PROJECTS/docss%20and%20reports/Asiya_Shaikh_Project_Case_Studies%20(1).pdf" target="_blank" class="bg-purple-600 text-white px-4 py-2 rounded-lg text-sm hover:bg-purple-700 transition-colors">PDF LINK</a>
+                        <a href= "https://drive.google.com/file/d/15b77VuTngAprHqStIoGVNcq5od2gtaAr/view?usp=sharing" target="_blank" class="bg-purple-600 text-white px-4 py-2 rounded-lg text-sm hover:bg-purple-700 transition-colors">PDF LINK</a>
                     </div>
                 </div>
             </div>
@@ -418,7 +418,7 @@
     
     <!-- View All Certificates Button -->
     <div class="text-center mt-10">
-      <a href="https://drive.google.com/drive/folders/1HFSQSWGNUmZExTt6DZ9hhAvUOfma1V4p?usp=drive_link" 
+      <a href="https://drive.google.com/drive/folders/1HFSQSWGNUmZExTt6DZ9hhAvUOfma1V4p?usp=sharing" 
          target="_blank" 
          class="bg-purple-600 text-white px-6 py-3 rounded-full font-semibold hover:bg-purple-700 transition-all">
         View All Certificates
